# Felijae

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  DefaultFormat.xml  demo_glfw_gl.cpp  demo_sdl_gl.cpp  demo_sdl_metal.cpp  generate_xcodeproj.sh  main.cpp  main_sdl.cpp  triangle.metal  triangle_metallib.h
Engine/: CMakeLists.txt
Engine/Base/: CMakeLists.txt
Engine/Base/include/Base/: ImageData.h  ImageFormat.h  Triangle.h
Engine/Base/include/Base/File/: File.h
Engine/Base/include/Base/Object/: Object.h  Polygons.h  Triangle.h
Engine/Base/include/Base/Utility/: EnumBitMask.h  FileReader.h  ImageLoader.h  ImageUtil.h  ThreadChecker.h  TypeCast.h
Engine/Base/src/: Object.cpp  Triangle.cpp
Engine/Base/src/File/: File.cpp
Engine/Base/src/Object/: Object.cpp  Polygons.cpp  Triangle.cpp
Engine/Base/src/Utility/: FileReader.cpp  ImageLoader.cpp  ImageUtil.cpp  ThreadChecker.cpp
Engine/Graphics/: CMakeLists.txt
Engine/Graphics/include/Graphics/Metal/: MetalBuffer.h  MetalCommandBuffer.h  MetalCommandEncoder.h  MetalCommandQueue.h  MetalComputeCommandEncoder.h  MetalComputePipeline.h  MetalDevice.h  MetalFence.h  MetalOutputMerger.h  MetalPipeline.h  MetalRasterizer.h  MetalRenderPass.h  MetalShader.h  MetalTexture.h  MetalVertexBuffer.h
Engine/Graphics/include/Graphics/Model/: Buffer.h  CommandBuffer.h  CommandEncoder.h  CommandQueue.h  ComputeCommandEncoder.h  ComputePipeline.h  Device.h  Fence.h  Model.h  OutputMerger.h  Pipeline.h  Program.h  Rasterizer.h  RenderPass.h  Scene.h  Shader.h  Texture.h  Triangle.h  Uniforms.h  VertexBuffer.h
Engine/Graphics/include/Graphics/OpenGL/: OpenGLBuffer.h  OpenGLCommandBuffer.h  OpenGLCommandEncoder.h  OpenGLCommandQueue.h  OpenGLDevice.h  OpenGLFrameBuffer.h  OpenGLModel.h  OpenGLOutputMerger.h  OpenGLPipeline.h  OpenGLProgram.h  OpenGLRasterizer.h  OpenGLRenderPass.h  OpenGLTexture.h  OpenGLUtils.h  OpenGLVertexBuffer.h
Engine/Graphics/include/Graphics/Utility/: ARCManager.h  FormatConverter.h  ImageData.h  ImageFormatUtil.h  ImageLoader.h  MetalBlitCopy.h  MetalRef.h  OpenGLBlitCopy.h
Engine/Graphics/include/Metal/: MetalBuffer.h
Engine/Graphics/include/Model/: Model.h  Object.h  OutputMerger.h  Scene.h  Triangle.h
Engine/Graphics/include/OpenGL/: OpenGLBuffer.h  OpenGLModel.h  OpenGLProgram.h  OpenGLRasterizer.h
Engine/Graphics/include/Utility/: FileReader.h  ImageData.h  ImageFormat.h
Engine/Graphics/src/Metal/: MetalBuffer.cpp  MetalCommandBuffer.cpp  MetalCommandEncoder.cpp  MetalCommandQueue.cpp  MetalComputeCommandEncoder.cpp  MetalComputePipeline.cpp  MetalDevice.cpp  MetalFence.cpp  MetalOutputMerger.cpp  MetalPipeline.cpp  MetalRasterizer.cpp  MetalRenderPass.cpp  MetalShader.cpp  MetalTexture.cpp  MetalVertexBuffer.cpp
Engine/Graphics/src/Model/: Camera.cpp  Model.cpp  Object.cpp  Scene.cpp  Triangle.cpp  Uniforms.cpp
Engine/Graphics/src/OpenGL/: OpenGLBuffer.cpp  OpenGLCommandBuffer.cpp  OpenGLCommandEncoder.cpp  OpenGLCommandQueue.cpp  OpenGLDevice.cpp  OpenGLFrameBuffer.cpp  OpenGLModel.cpp  OpenGLOutputMerger.cpp  OpenGLPipeline.cpp  OpenGLProgram.cpp  OpenGLRasterizer.cpp  OpenGLRenderPass.cpp  OpenGLTexture.cpp  OpenGLUtils.cpp  OpenGLVertexBuffer.cpp
Engine/Graphics/src/Utility/: FileReader.cpp  FormatConverter.cpp  ImageFormatUtil.cpp  ImageLoader.cpp  MetalBlitCopy.cpp  OpenGLBlitCopy.cpp  ThreadChecker.cpp
Engine/Shader/: CMakeLists.txt
Engine/Shader/include/Shader/: ShaderConverter.h
Engine/Shader/src/: ShaderConverter.cpp
Engine/ShaderConverter/: CMakeLists.txt
Engine/ShaderConverter/include/ShaderConverter/: ShaderConverter.h
Engine/ShaderConverter/src/: ShaderConverter.cpp
Engine/graphics/metal/: CMakeLists.txt
Engine/graphics/metal/include/Metal/: triangle_types.h
Engine/include/Engine/: Engine.h
Engine/include/Engine/Model/: Camera.h  Light.h  Model.h  Node.h  Scene.h
Engine/include/Engine/Renderer/: ComputeRenderer.h  ForwardRenderer.h  GraphicsRenderer.h  Renderer.h
Engine/include/Metal/: MetalShader.h
Engine/include/Model/: Camera.h  Light.h  Model.h  OutputMerger.h  Pipeline.h  Program.h  Rasterizer.h  RenderPass.h  Scene.h  Texture.h  Triangle.h
Engine/include/OpenGL/: OpenGLFrameBuffer.h  OpenGLModel.h  OpenGLPipeline.h  OpenGLProgram.h  OpenGLRenderPass.h  OpenGLTexture.h  OpenGLUtils.h
Engine/include/Utility/: FileReader.h  ImageLoader.h  MetalRef.h  ThreadChecker.h
Engine/src/: Engine.cpp
Engine/src/Metal/: MetalBuffer.cpp  MetalDevice.cpp  MetalShader.cpp
Engine/src/Model/: Camera.cpp  Model.cpp  Object.cpp  Scene.cpp  Triangle.cpp
Engine/src/OpenGL/: OpenGLBuffer.cpp  OpenGLFrameBuffer.cpp  OpenGLModel.cpp  OpenGLOutputMerger.cpp  OpenGLPipeline.cpp  OpenGLProgram.cpp  OpenGLRasterizer.cpp  OpenGLRenderPass.cpp  OpenGLTexture.cpp  OpenGLUtils.cpp
Engine/src/Renderer/: ComputeRenderer.cpp  ForwardRenderer.cpp  GraphicsRenderer.cpp  Renderer.cpp
Engine/src/Utility/: FileReader.cpp  ImageLoader.cpp  ThreadChecker.cpp
Graphics/: CMakeLists.txt
Model/: Object.h  Triangle.cpp
OpenGL/: Model.cpp  Model.h  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLModel.cpp  OpenGLModel.h  OpenGLPipeline.cpp  OpenGLPipeline.h  OpenGLProgram.cpp  OpenGLProgram.h  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h
demo/: CMakeLists.txt  demo_compute.cpp  demo_graphics.cpp  demo_sdl_gl.cpp  demo_sdl_metal.cpp  demo_shader.cpp  demo_shader_converter.cpp
demo/SDLWrapper/: CMakeLists.txt
demo/SDLWrapper/include/SDLWrapper/: MetalSDLWrapper.h  OpenGLSDLWrapper.h  SDLWrapper.h
demo/SDLWrapper/src/: MetalSDLWrapper.cpp  OpenGLSDLWrapper.cpp  SDLWrapper.cpp
demo/asset/shader/: axis.frag  axis.vert  color_frag.msl  computePipeline0_buf2tex.msl  computePipeline1_tex2tex.msl  computePipeline2_tex2buf.msl  computePipeline3_buf2buf.msl  compute_example.msl  compute_grayscale.msl  gl_lighting.frag  gl_lighting.vert  gl_texture.frag  gl_texture.vert  lighting.frag  lighting.vert  lighting_frag.glsl  lighting_frag.msl  lighting_vert.msl  metal_color.vert  rgb_buf_to_bgra_texture.msl  texture2texture.msl  texture_frag.msl  texture_vert.msl
(+18 files in other folders)
